Fix macOS sidedock shadow overlap

--- a/src/layouts/macos.scss
+++ b/src/layouts/macos.scss
@@ -4,7 +4,7 @@ body.layout-macos:not(.is-mobile) {
     --nav-item-background-active: var(--background-modifier-hover);
   }
   &.theme-dark {
-    --shadow-sidedock: var(--shadow-border), 0 0 1px rgba(255, 255, 255, 0.35), 0 0 1px 0 rgba(0, 0, 0, 0.4), 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 0 0 16px var(--background-primary);
+    --shadow-sidedock: var(--shadow-border), 0 0 1px rgba(255, 255, 255, 0.35), 0 0 1px 0 rgba(0, 0, 0, 0.4), 0 8px 16px 0 rgba(0, 0, 0, 0.2), -16px 0 0 16px var(--background-primary);
     --nav-item-background-active: rgba(0, 0, 0, 0.5);
   }
 
@@ -110,16 +110,7 @@ body.layout-macos:not(.is-mobile) {
 
 body.layout-macos.is-tablet {
   .workspace {
-    background-color: var(--system-status-background);
-  }
-
-  // Editor panel
-  --tab-background-active: var(--system-status-background);
-
-  .mod-root .view-header,
-  .mod-root .view-header::before,
-  .mod-root .view-content {
-    background-color: var(--system-status-background) !important;
+    background-color: rgb(var(--mono-rgb-0));
   }
 
   // Side panels
